--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,9 @@ versions = versions
 recipe = zc.recipe.testrunner
 eggs = isotoma.recipe.stunnel
 
+[facts]
+recipe = isotoma.recipe.facts
+
 [stunnel:ssl]
 name = ssl
 accept = 0.0.0.0:443
@@ -20,6 +23,10 @@ recipe = isotoma.recipe.stunnel
 backends =
     stunnel:ssl
 pidfile = ${buildout:parts-directory}/stunnel.pid
+cert = /etc/ssl/certs/ssl-cert-snakeoil.pem
+key = /etc/ssl/private/ssl-cert-snakeoil.key
+loglevel = 7
+user = ${facts:user.name}
 
 [versions]
 zc.buildout = 1.4.3
@@ -32,4 +39,7 @@ zope.exceptions = 3.6.1
 isotoma.recipe.gocaptain = 0.0.9
 Cheetah = 2.4.4
 Markdown = 2.1.1
+missingbits = 0.0.14
+Jinja2 = 2.6
+isotoma.recipe.facts = 0.0.6
 
