--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include *.rst *.txt
-recursive-include isotoma/recipe/stunnel *.conf
+recursive-include isotoma/recipe/stunnel/templates *.conf.j2
 
